# jaxarc-baselines

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  run_experiment.py
.github/workflows/: cd.yml  ci.yml
configs/env/jaxarc/: default.yaml
configs/env/jaxarc/subsets/AGI1/: easy.yaml  easy_eval.yaml  easy_train.yaml  entry.yaml  entry_eval.yaml  entry_train.yaml  hard.yaml  hard_eval.yaml  hard_train.yaml  medium.yaml  medium_eval.yaml  medium_train.yaml  multiple_solutions.yaml  multiple_solutions_eval.yaml  multiple_solutions_train.yaml  single_easy.yaml  tedious_eval.yaml  tedious_train.yaml
configs/env/jaxarc/subsets/Mini/: easy.yaml  single_easy.yaml
configs/launcher/: jaxarc_experiments.yaml
configs/logger/: wandb.yaml
configs/network/: arc_deep_cnn.yaml  arc_shallow_cnn.yaml  arc_visual_resnet.yaml
configs/reward/: balanced.yaml  minimal.yaml  stable.yaml
configs/system/ppo/: jaxarc.yaml
experiments/configs/: default_ppo_jaxarc.yaml
scripts/: launch_slurm_experiments.py
src/jaxarc_baselines/: __init__.py
src/jaxarc_baselines/metrics/: __init__.py  custom_metrics.py
src/jaxarc_baselines/utils/: __init__.py  make_env.py  registration.py  subset_loader.py
src/jaxarc_baselines/wrappers/: __init__.py  extended_metrics.py
utils/: make_env.py
