[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"


[project]
name = "jaxarc-baselines"
version = "0.1.0"
authors = [{ name = "Aadam", email = "aadimator@gmail.com" }]
description = "Baselines for the JaxARC environment"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/aadimator/JaxARC-Baselines"
"Bug Tracker" = "https://github.com/aadimator/JaxARC-Baselines/issues"
Discussions = "https://github.com/aadimator/JaxARC-Baselines/discussions"
Changelog = "https://github.com/aadimator/JaxARC-Baselines/releases"

[tool.coverage]
run.source = ["jaxarc_baselines"]
report.exclude_also = ['\.\.\.', 'if typing.TYPE_CHECKING:']

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "jaxarc_baselines.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
    "ARG", # flake8-unused-arguments                                                                                                                                    
    "B",   # flake8-bugbear                                                                                                                                             
    "C4",  # flake8-comprehensions                                                                                                                                      
    "EM",  # flake8-errmsg                                                                                                                                              
    "EXE", # flake8-executable                                                                                                                                          
    "G",   # flake8-logging-format                                                                                                                                      
    "I",   # isort                                                                                                                                                      
    "ICN", # flake8-import-conventions                                                                                                                                  
    "NPY", # NumPy specific rules                                                                                                                                       
    "PD",  # pandas-vet                                                                                                                                                 
    "PGH", # pygrep-hooks                                                                                                                                               
    "PIE", # flake8-pie                                                                                                                                                 
    "PL",  # pylint                                                                                                                                                     
    "PT",  # flake8-pytest-style                                                                                                                                        
    "PTH", # flake8-use-pathlib                                                                                                                                         
    "RET", # flake8-return                                                                                                                                              
    "RUF", # Ruff-specific                                                                                                                                              
    "SIM", # flake8-simplify                                                                                                                                            
    "T20", # flake8-print                                                                                                                                               
    "UP",  # pyupgrade                                                                                                                                                  
    "YTT", # flake8-2020                                                                                                                                                  
]
ignore = [
    "PLR09",   # Too many <...>                                                                                                                                               
    "PLR2004", # Magic value used in comparison                                                                                                                               
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport                                                                                                                               
# typing-modules = ["jaxarc_baselines._compat.typing"]                                                                                                                       

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
    "design",
    "fixme",
    "line-too-long",
    "missing-module-docstring",
    "missing-function-docstring",
    "wrong-import-position",
]
